# Hw-for-UTCN

./: ex1-sem2.cpp  ex1.c  ex12.c  ex13.c  ex14.c  ex2-sem2.cpp  ex3-sem2.cpp  ex3.c  ex4.c  ex5.c  ex6.c
proiectBoboLab1/: App.cpp  CMakeLists.txt  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
projectAbel/: ex3.java
projectBobo-Lab2/: App.cpp  CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h
projectBobo-Lab4/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
projectBoboLab3/: CMakeLists.txt
projectBoboLab3/Proiect C++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
